install materialize and remove bootstrap

--- a/app/javascript/stylesheets/application.scss
+++ b/app/javascript/stylesheets/application.scss
@@ -1,15 +1,1 @@
-@import "~bootstrap/scss/bootstrap";
-
-
-.blog-footer {
-  padding: 2.5rem 0;
-  color: #999;
-  text-align: center;
-  background-color: #f9f9f9;
-  border-top: .05rem solid #e5e5e5;
-  width: 100%;
-  text-align: center;
-  position: fixed;
-  left: 0;
-  bottom: 0;
-}
+@import 'materialize-css/dist/css/materialize';
