--- a/app/views/users/_registration_form.html.erb
+++ b/app/views/users/_registration_form.html.erb
@@ -1,3 +1,4 @@
+     
 <%= form_with(model: user, local: true) do |form| %>
   <% if user.errors.any? %>
     <div id="error_explanation">
@@ -11,47 +12,51 @@
     </div>
   <% end %>
 
-  <div class="field">
-    <%= form.label :first_name %>
-    <%= form.text_field :first_name %>
-  </div>
+<div class="container">
+<div class="row justify-content-center">
+                    <div class="col-md-8">
+                        <div class="card">
+                            <div class="card-header">Preencha os campos abaixo</div>
+                            <div class="card-body">
+                             <div class="row">
+                             <div class="col">
+                             
+                              <%= form.text_field :first_name, class:"form-control", placeholder:"Primeiro Nome" %>
+                            </div>
+                            <div class="col">
+                             <%= form.text_field :last_name, class:"form-control", placeholder: "Sobrenome" %>
+                            </div>
+                            </div>
+                            <div class="field">
+                              <%= form.label :email %>
+                              <%= form.text_field :email, class:"form-control" %>
+                            </div>
 
-  <div class="field">
-    <%= form.label :last_name %>
-    <%= form.text_field :last_name %>
-  </div>
+                            <div class="field">
+                              <%= form.label :cellphone %>
+                              <%= form.text_field :cellphone, class:"form-control" %>
+                            </div>
 
-  <div class="field">
-    <%= form.label :email %>
-    <%= form.text_field :email %>
-  </div>
+                              <%= form.text_field :role, type:"hidden", value: "admin" %>
 
-  <div class="field">
-    <%= form.label :cellphone %>
-    <%= form.text_field :cellphone %>
-  </div>
+                            <div class="field">
+                              <%= form.label :cpf %>
+                              <%= form.text_field :cpf, class:"form-control" %>
+                            </div>
 
-  <div class="field">
-    <%= form.label :role %>
-    <%= form.text_field :role %>
-  </div>
+                            <div class="field">
+                              <%= form.label :password %>
+                              <%= form.text_field :password, class:"form-control", type: "password" %>
+                            </div>
 
-  <div class="field">
-    <%= form.label :cpf %>
-    <%= form.text_field :cpf %>
-  </div>
+                            <div class="actions">
+                              <%= form.submit "Criar Conta" , class:"btn btn-primary" %>
+                            </div>
+                          <% end %>
 
-  <div class="field">
-    <%= form.label :institution_id %>
-    <%= form.number_field :institution_id %>
-  </div>
+                         </div>
 
-  <div class="field">
-    <%= form.label :password %>
-    <%= form.text_field :password %>
-  </div>
-
-  <div class="actions">
-    <%= form.submit %>
-  </div>
-<% end %>
+                        </div>
+                    </div>
+                </div>
+</div>
