--- a/app/views/users/_registration_form.html.erb
+++ b/app/views/users/_registration_form.html.erb
@@ -1,3 +1,5 @@
+
+  
      
 <%= form_with(model: user, local: true) do |form| %>
   <% if user.errors.any? %>
@@ -12,51 +14,49 @@
     </div>
   <% end %>
 
-<div class="container">
-<div class="row justify-content-center">
-                    <div class="col-md-8">
-                        <div class="card">
-                            <div class="card-header">Preencha os campos abaixo</div>
-                            <div class="card-body">
-                             <div class="row">
-                             <div class="col">
-                             
-                              <%= form.text_field :first_name, class:"form-control", placeholder:"Primeiro Nome" %>
-                            </div>
-                            <div class="col">
-                             <%= form.text_field :last_name, class:"form-control", placeholder: "Sobrenome" %>
-                            </div>
-                            </div>
-                            <div class="field">
-                              <%= form.label :email %>
-                              <%= form.text_field :email, class:"form-control" %>
-                            </div>
 
-                            <div class="field">
-                              <%= form.label :cellphone %>
-                              <%= form.text_field :cellphone, class:"form-control" %>
-                            </div>
 
-                              <%= form.text_field :role, type:"hidden", value: "admin" %>
-
-                            <div class="field">
-                              <%= form.label :cpf %>
-                              <%= form.text_field :cpf, class:"form-control" %>
-                            </div>
-
-                            <div class="field">
-                              <%= form.label :password %>
-                              <%= form.text_field :password, class:"form-control", type: "password" %>
-                            </div>
-
-                            <div class="actions">
-                              <%= form.submit "Criar Conta" , class:"btn btn-primary" %>
-                            </div>
-                          <% end %>
-
-                         </div>
-
-                        </div>
-                    </div>
-                </div>
-</div>
+ <div class="row">
+    <form class="col s12">
+      <div class="row">
+        <div class="input-field col s6">
+          <label for="first_name">Primeiro Nome</label>
+          <%= form.text_field :first_name, class:"validade", id: "first_name", type: "text" %> 
+        </div>
+        <div class="input-field col s6">
+          <%= form.text_field :last_name, class:"validate", id: "last_name", type: "text" %>
+          <label for="last_name">Sobrenome</label>
+        </div>
+      </div>
+      <div class="row">
+        <div class="input-field col s12">
+          <label for="CPF">CPF</label>
+          <%= form.text_field :cpf, class:"validate" %>
+        </div>  
+      </div>
+      <div class="row">
+        <div class="input-field col s12">
+          <label for="cellphone">Celular</label>
+          <%= form.text_field :cellphone, class:"validate", id: "cellphone" %>
+          
+        </div>
+      </div>
+      <div class="row">
+        <div class="input-field col s12">
+          <%= form.text_field :email, class:"validate", type: "email", id: "email" %>
+          <label for="email">Email</label>
+        </div>
+      </div>  
+      <div class="row">
+        <div class="input-field col s12">
+          <label for="password">Senha</label>
+          <%= form.text_field :password, class:"form-control", type: "password", class: "validate", id: "password" %>
+        </div>
+      </div>
+      </div>
+      <%= form.text_field :role, value: "admin", type:"hidden" %>
+      <%= form.submit "Criar Conta" , class:"btn btn-primary" %>
+    </form>
+    <% end %>
+    <br><br>
+  </div>
