--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -54,7 +54,7 @@
       </div>
       </div>
       <%= form.text_field :role, value: "admin", type:"hidden" %>
-      <%= form.submit "Criar Conta" , class:"btn btn-primary" %>
+      <%= form.submit "Enviar" , class:"btn btn-primary" %>
     </form>
     <% end %>
     <br><br>
