--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -28,9 +28,9 @@
         <td><%= user.cpf %></td>
         <td><%= user.institution_id %></td>
         <td><%= user.password %></td>
-        <td><%= link_to 'Show', user %></td>
-        <td><%= link_to 'Edit', edit_user_path(user) %></td>
-        <td><%= link_to 'Destroy', user, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td><%= link_to 'Exibir', user %></td>
+        <td><%= link_to 'Editar', edit_user_path(user) %></td>
+        <td><%= link_to 'Apagar', user, method: :delete, data: { confirm: 'Você tem certeza que deseja apagar este usuário?' } %></td>
       </tr>
     <% end %>
   </tbody>
