--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -12,7 +12,7 @@
       <th>Role</th>
       <th>Cpf</th>
       <th>Institution</th>
-      <th>Password</th>
+      <th>Qtd. de SAV</th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -27,7 +27,7 @@
         <td><%= user.role %></td>
         <td><%= user.cpf %></td>
         <td><%= user.institution_id %></td>
-        <td><%= user.password %></td>
+        <td><%= user.classrooms.count %></td>
         <td><%= link_to 'Exibir', user %></td>
         <td><%= link_to 'Editar', edit_user_path(user) %></td>
         <td><%= link_to 'Apagar', user, method: :delete, data: { confirm: 'Você tem certeza que deseja apagar este usuário?' } %></td>
