--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -3,8 +3,8 @@
     <div class="nav-wrapper">
       <a href="#" class="brand-logo">SAV Blox</a>
       <ul id="nav-mobile" class="right hide-on-med-and-down">
-        <li><a href="classrooms">Classrooms</a></li>
-        <li><a href="users">User</a></li>
+        <li><a href="/classrooms">Classrooms</a></li>
+        <li><a href="/users">User</a></li>
       </ul>
     </div>
   </nav>
