show user full name at classroom listing

--- a/app/views/classrooms/index.html.erb
+++ b/app/views/classrooms/index.html.erb
@@ -2,7 +2,7 @@
 
 <h1>Classrooms</h1>
 
-<table class="striped">
+<table class="striped center">
   <thead>
     <tr>
       <th>Title</th>
@@ -17,7 +17,7 @@
       <tr>
         <td><%= classroom.title %></td>
         <td><%= classroom.capacity %></td>
-        <td><%= classroom.user_id  %></td>
+        <td>(<%= classroom.user_id %>) <%= classroom.user.first_name %> <%= classroom.user.last_name %></td>
         <td><%= link_to 'Show', classroom %></td>
         <td><%= link_to 'Edit', edit_classroom_path(classroom) %></td>
         <td><%= link_to 'Destroy', classroom, method: :delete, data: { confirm: 'Are you sure?' } %></td>
