--- a/app/views/classrooms/_form.html.erb
+++ b/app/views/classrooms/_form.html.erb
@@ -1,6 +1,4 @@
-<!-- <%= form_with(model: classroom, local: true) do |form| %> -->
-
-<%= render 'shared/errors' %>
+<%= form_with(model: classroom, local: true) do |form| %>
 
   <div class="field">
     <%= form.label :title %>
