fix shared erros partial

--- a/app/views/classrooms/_form.html.erb
+++ b/app/views/classrooms/_form.html.erb
@@ -1,4 +1,5 @@
 <%= form_with(model: classroom, local: true) do |form| %>
+<%= render 'shared/errors', obj: @classroom %>
 
   <div class="field">
     <%= form.label :title %>
