--- a/app/views/shared/_errors.html.erb
+++ b/app/views/shared/_errors.html.erb
@@ -1,11 +1,11 @@
 
-  <% if @user.errors.any? %>
+  <% if obj.errors.any? %>
     <div class="card red darken-1" id="error_explanation">
       <div class="card-content white-text">
-      <h4><%= pluralize(@user.errors.count, "error") %> prohibited this user from being saved:</h4>
+      <h6><%= pluralize(obj.errors.count, "error") %> prohibited this user from being saved:</h6>
 
       <ul>
-        <% @user.errors.full_messages.each do |message| %>
+        <% obj.errors.full_messages.each do |message| %>
           <li><%= message %></li>
         <% end %>
       </ul>
