--- a/app/views/shared/_errors.html.erb
+++ b/app/views/shared/_errors.html.erb
@@ -2,7 +2,7 @@
   <% if obj.errors.any? %>
     <div class="card red darken-1" id="error_explanation">
       <div class="card-content white-text">
-      <h6><%= pluralize(obj.errors.count, "error") %> prohibited this user from being saved:</h6>
+      <h6><%= pluralize(obj.errors.count, "error") %> prohibited this <%= obj.class.name.downcase %> from being saved:</h6>
 
       <ul>
         <% obj.errors.full_messages.each do |message| %>
