--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -39,7 +39,7 @@
       </div>
       </div>
       <%= form.text_field :role, value: "admin", type:"hidden" %>
-      <%= form.submit "Enviar" , class:"btn btn-primary" %>
+      <%= form.submit(@user.new_record? ? "Criar Conta" : "Atualizar Conta", class:"btn btn-primary") %>
     </form>
     <% end %>
     <br><br>
