--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -40,5 +40,10 @@
   <%= @user.password %>
 </p>
 
+
+<p id="notice"><%= notice %></p>
+
+<%= render 'classrooms/user_classrooms'%>
+
 <%= link_to 'Edit', edit_user_path(@user) %> |
 <%= link_to 'Back', users_path %>
